name:                http-parse
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/splondike/http-parse#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options: -Wall
  exposed-modules:     Data.HTTP.Parser,
                       Data.HTTP.Parser.Body,
                       Data.HTTP.Parser.Header,
                       Data.HTTP.Parser.Query,
                       Data.HTTP.Parser.Types
  build-depends:       base >= 4.7 && < 5
                     , http-types
                     , bytestring
                     , attoparsec
                     , case-insensitive
  default-language:    Haskell2010

test-suite http-parse-test-suite
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test
  ghc-options: -rtsopts -threaded -with-rtsopts=-N
  other-modules: Test.Data.HTTP.Parser.Header,
                 Test.Data.HTTP.Parser.Body,
                 Test.Data.HTTP.Parser.ArbitraryInstances
  build-depends:
      base
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , QuickCheck
    , http-parse
    , bytestring
    , attoparsec
    , http-types
    , case-insensitive
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/splondike/http-parse
